--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.9,<3.11"
 numpy = "^1.21.4"
 jupyterlab = "^3.2.4"
 matplotlib = "^3.5.0"
+asyncio = "^3.4.3"
 
 [tool.poetry.dev-dependencies]
 
